--- a/styles/architects.css
+++ b/styles/architects.css
@@ -2,57 +2,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
 /* shared atyle */
-*{
+* {
     font-family: 'Work Sans', sans-serif;
 }
-.btn-primary{
-    
+
+.btn-primary {
+    border-radius: 8px;
+    color: #fff;
+    font-size: 1.25rem;
+    background: #FF900E;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
 }
 
 /* header style */
-header{
+header {
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 200px;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
+
+.nav-title {
     font-size: 2.7rem;
     font-weight: 700;
     color: #131313;
 }
 
-nav > ul{
+nav>ul {
     display: flex;
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-right: 30px;
     font-weight: 500;
     font-size: 1rem;
 }
-nav li a{
+
+nav li a {
     text-decoration: none;
     color: #424242;
 }
 
 /* banner style */
-.banner-content{
+.banner-content {
     max-width: 700px;
     text-align: center;
     margin: 0 auto;
 }
 
-.banner-title{
+.banner-title {
     font-size: 4rem;
     font-weight: 700;
     color: #131313;
 }
-.banner-discription{
+
+.banner-discription {
     color: #727272;
 }
 
-.
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav {
+        flex-direction: column; 
+    }
+}
+/* tab devices */
+@media screen and (min-width: 576px) and (max-width: 922px) {
+    header{
+        padding: 50px;
+    }
+    nav {
+        flex-direction: column;
+    }
+}
