--- a/styles/architects.css
+++ b/styles/architects.css
@@ -5,6 +5,9 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-gray {
+    color: #727272;
+}
 
 .btn-primary {
     border-radius: 8px;
@@ -63,22 +66,61 @@ nav li a {
     color: #131313;
 }
 
-.banner-discription {
-    color: #727272;
-}
-
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
+
+/* main styles */
+main{
+    max-width: 1440px;
+    margin: 70px auto;
+}
+/* teams styles */
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title {
+    font-size: 2.8rem;
+}
+.teams-title .quick-list {
+    font-weight: 500;
+}
+.teams-title .text-features {
+    color: #FF900E;
+    font-weight: 700px;
+}
+
+
+
+
+
 /* responsive media queries */
 /* mobile devices */
 @media screen and (max-width: 576px) {
     header{
         padding: 20px;
     }
-    nav {
+    nav, 
+    .teams-container {
         flex-direction: column; 
+    }
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
 /* tab devices */
@@ -86,37 +128,8 @@ nav li a {
     header{
         padding: 50px;
     }
-    nav {
+    nav,
+    .teams-container {
         flex-direction: column;
     }
-}
-/* main styles */
-main{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-/* teams styles */
-.teams-container {
-    display: flex;
-    text-align: center;
-}
-.teams-img-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
-}
-.teams-content {
-    padding-right: 70px;
-    padding-left: 70px;
-}
-.teams-title {
-    font-size: 2.8rem;
-}
-.teams-title .quick-list {
-    color: #727272;
-    font-weight: 500;
-}
-.teams-title .text-features {
-    color: #FF900E;
-    font-weight: 700px;
 }
