--- a/styles/architects.css
+++ b/styles/architects.css
@@ -18,6 +18,11 @@
     cursor: pointer;
     border: 0;
 }
+.section-title {
+    font-size: 2.7rem;
+    font-weight: 700;
+    color: #131313;
+}
 
 /* header style */
 header {
@@ -31,11 +36,6 @@ nav {
     align-items: center;
 }
 
-.nav-title {
-    font-size: 2.7rem;
-    font-weight: 700;
-    color: #131313;
-}
 
 nav>ul {
     display: flex;
