--- a/styles/architects.css
+++ b/styles/architects.css
@@ -5,6 +5,7 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
+
 .text-light-gray {
     color: #727272;
 }
@@ -18,6 +19,7 @@
     cursor: pointer;
     border: 0;
 }
+
 .section-title {
     font-size: 2.7rem;
     font-weight: 700;
@@ -66,39 +68,70 @@ nav li a {
     color: #131313;
 }
 
-.banner img{
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
 
 /* main styles */
-main{
+main {
     max-width: 1440px;
     margin: 70px auto;
 }
+
 /* teams styles */
 .teams-container {
     display: flex;
     align-items: center;
 }
+
 .teams-img-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
-.teams-content{
+
+.teams-content {
     padding-left: 70px;
     padding-right: 70px;
 }
+
 .teams-title {
     font-size: 2.8rem;
 }
+
 .teams-title .quick-list {
     font-weight: 500;
 }
+
 .teams-title .text-features {
     color: #FF900E;
     font-weight: 700px;
+}
+
+/* facts section */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+
+}
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-top: 5px;
+
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-bottom: 10px;
 }
 
 
@@ -108,26 +141,31 @@ main{
 /* responsive media queries */
 /* mobile devices */
 @media screen and (max-width: 576px) {
-    header{
+    header {
         padding: 20px;
     }
-    nav, 
+
+    nav,
     .teams-container {
-        flex-direction: column; 
+        flex-direction: column;
     }
+
     .teams-img-container {
         grid-template-columns: 1fr;
     }
-    .teams-content{
+
+    .teams-content {
         padding-left: 30px;
         padding-right: 30px;
     }
 }
+
 /* tab devices */
 @media screen and (min-width: 576px) and (max-width: 922px) {
-    header{
+    header {
         padding: 50px;
     }
+
     nav,
     .teams-container {
         flex-direction: column;
