added the sponsors section

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -133,6 +133,20 @@ main {
     color: #424242;
     margin-bottom: 10px;
 }
+/* sponsors styles */
+.sponsors {
+    text-align: center;
+}
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 
@@ -146,7 +160,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
@@ -154,9 +170,12 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
+    .teams-content, .facts-card-container {
         padding-left: 30px;
         padding-right: 30px;
+    }
+    .facts-card-container {
+        gap: 20px;
     }
 }
 
@@ -167,7 +186,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
 }
