--- a/styles/architects.css
+++ b/styles/architects.css
@@ -109,19 +109,63 @@ main {
     font-weight: 700px;
 }
 
+/* feature section styles */
+.features {
+    margin: 130px;
+    display: flex;
+    gap: 100px;
+}
+.features .section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.features-img img{
+    height: 100%;
+    margin-left: 90px;
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
+}
+
 /* facts section */
 .facts-card-container {
     display: flex;
     justify-content: space-around;
 
 }
+
 .facts-card-container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
 }
-.facts-card-container .card-title{
+
+.facts-card-container .card-title {
     font-weight: 600;
     font-size: 1.2rem;
     margin-top: 5px;
@@ -133,10 +177,12 @@ main {
     color: #424242;
     margin-bottom: 10px;
 }
+
 /* sponsors styles */
 .sponsors {
     text-align: center;
 }
+
 .sponsors-img-container {
     margin-top: 50px;
     display: flex;
@@ -144,7 +190,8 @@ main {
     align-items: center;
     gap: 40px;
 }
-.sponsors-img-container img{
+
+.sponsors-img-container img {
     width: 165px;
 }
 
@@ -161,19 +208,30 @@ main {
 
     nav,
     .teams-container,
+    .features,
     .facts-card-container,
     .sponsors-img-container {
         flex-direction: column;
     }
+    .features-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+.ten-years-badge{
+    position: static;
+    max-width: 300px;
+}
 
     .teams-img-container {
         grid-template-columns: 1fr;
     }
 
-    .teams-content, .facts-card-container {
+    .teams-content,
+    .facts-card-container {
         padding-left: 30px;
         padding-right: 30px;
     }
+
     .facts-card-container {
         gap: 20px;
     }
@@ -186,9 +244,9 @@ main {
     }
 
     nav,
+    .features,
     .teams-container,
-    .sponsors-img-container
-    {
+    .sponsors-img-container {
         flex-direction: column;
     }
 }
