--- a/styles/architects.css
+++ b/styles/architects.css
@@ -115,7 +115,8 @@ main {
     display: flex;
     gap: 100px;
 }
-.features .section-title{
+
+.features .section-title {
     border-left: 5px solid #FF900E;
     padding-left: 20px;
 }
@@ -128,7 +129,8 @@ main {
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 
-.features-img img{
+.features-img img {
+    width: 90%;
     height: 100%;
     margin-left: 90px;
 }
@@ -137,17 +139,19 @@ main {
     border-radius: 8px;
     background: #FF900E;
     color: #FFF;
-    width: 342px;
+    width: 340px;
     padding: 40px;
     text-align: center;
     position: relative;
     bottom: 100px;
 }
-.ten-years-badge h2{
+
+.ten-years-badge h2 {
     font-size: 4rem;
     margin: 0;
 }
-.ten-years-badge p{
+
+.ten-years-badge p {
     font-size: 1.5rem;
 }
 
@@ -195,6 +199,22 @@ main {
     width: 165px;
 }
 
+footer {
+    color: #424242;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-top: 100px;
+}
+.border{
+    border-radius: 8px;
+    background: #FFF4E7;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 40px 0;
+}
+
 
 
 
@@ -213,14 +233,16 @@ main {
     .sponsors-img-container {
         flex-direction: column;
     }
-    .features-img img{
+
+    .features-img img {
         width: 90%;
         margin-left: 0;
     }
-.ten-years-badge{
-    position: static;
-    max-width: 300px;
-}
+
+    .ten-years-badge {
+        position: static;
+        max-width: 180px;
+    }
 
     .teams-img-container {
         grid-template-columns: 1fr;
